[gd_scene load_steps=4 format=3 uid="uid://clkpj52rnws1"]

[ext_resource type="Texture2D" uid="uid://q1oidrrbq4nk" path="res://atac.jpg" id="1_cyx5s"]
[ext_resource type="Script" path="res://ayaybutnoyforme.gd" id="1_tb4aq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa6gy"]
size = Vector2(6, 4)

[node name="AyAybutnoyforme" type="CharacterBody2D"]
z_index = 2
collision_layer = 32
collision_mask = 0
script = ExtResource("1_tb4aq")
metadata/_edit_group_ = true

[node name="AyAybutnoyformearea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 5
monitoring = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AyAybutnoyformearea"]
shape = SubResource("RectangleShape2D_pa6gy")

[node name="Atac" type="Sprite2D" parent="."]
scale = Vector2(0.013, 0.015)
texture = ExtResource("1_cyx5s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pa6gy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pa6gy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = 2.0

[connection signal="body_entered" from="AyAybutnoyformearea" to="." method="_on_ay_aybutnoyformearea_body_entered"]
[connection signal="body_entered" from="AyAybutnoyformearea" to="AyAybutnoyformearea" method="_on_body_entered" flags=18]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
